# kaelifecpp

./: .gitignore  2  CMakeBuild.sh  CMakeLists.txt  LICENSE  Makefile  doxyfile  old.Makefile.mk  out.txt  out2.txt  readme.md
config/: config.json
docs/html/: annotated.html  classCABacklog-members.html  classCABacklog.html  classCACache-members.html  classCACache.html  classCAData-members.html  classCAData.html  classCADraw-members.html  classCADraw.html  classCALock-members.html  classCALock.html  classCAPreset-members.html  classCAPreset.html  classCARender-members.html  classCARender.html  classInputHandler-members.html  classInputHandler.html  classKaelRandom-members.html  classKaelRandom.html  classMasterConfig-members.html  classMasterConfig.html  classWorldMatrix-members.html  classWorldMatrix.html  classWorldMatrix_1_1RowProxy-members.html  classWorldMatrix_1_1RowProxy.html  classes.html  dir_1c257e71ab7f5d12ca333b7fc859baa5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_g.html  (+74 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  (+30 more)
include/: kaelRandom.hpp  kaelife.hpp  kaelifeBMPIO.hpp  kaelifeCABacklog.hpp  kaelifeCACache.hpp  kaelifeCAData.hpp  kaelifeCADraw.hpp  kaelifeCALock.hpp  kaelifeCAPreset.hpp  kaelifeCARender.hpp  kaelifeConfigIO.hpp  kaelifeControls.hpp  kaelifeRender.hpp  kaelifeRenderer.hpp  kaelifeSDL.hpp  kaelifeWorldCore.hpp  kaelifeWorldMatrix.hpp
include/CA/: kaelifeCABacklog.hpp  kaelifeCACache.hpp  kaelifeCAData.hpp  kaelifeCADraw.hpp  kaelifeCALock.hpp  kaelifeCAPreset.hpp
shader/: fragment.fs.glsl  palette.h.glsl  vertex.vs.glsl
src/: kaelifecpp.cpp
tools/: generatePalette.cpp  kaelRandCheck.cpp  kaelRandDieharder.cpp  printRand.cpp  wmtest.cpp
tools/jsonTest/: jsonTest.cpp
